fix: hide scrollbar on networth and index chart

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,15 +44,21 @@ th {
   content: unset !important;
 }
 
-/* .ant-segmented-item {
-  transition: red 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) !important;
-} */
 .ant-segmented-item-selected {
   @apply !bg-primary-6 !text-white;
 }
 
 .ant-segmented-thumb {
   @apply !bg-primary-6 !text-white;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 /* Customize website's scrollbar like Mac OS*/
